# ssh-askpass-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
Formula/: ssh-askpass-rs.rb
contrib/: com.github.dislabled.ssh-askpass-rs.plist
src/: keychain.rs  main.rs  prompt.rs  security.rs
src/dialog/: autofill.rs  cleartext.rs  confirm.rs  host_key.rs  mod.rs  password.rs
